--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 # Makefile for file(1) cmd. 
 # Copyright (c) Ian F. Darwin 86/09/01 - see LEGAL.NOTICE.
-# @(#)$Header: /p/file/cvsroot/file/src/Attic/Makefile,v 1.10 1987/09/18 21:45:51 ian Exp $
+# @(#)$Header: /p/file/cvsroot/file/src/Attic/Makefile,v 1.11 1987/10/06 20:15:52 ian Exp $
 #
 # This software is not subject to any license of the American Telephone
 # and Telegraph Company or of the Regents of the University of California.
@@ -27,22 +27,35 @@ DEFS	= -DMAGIC='"$(MAGIC)"' # -Dvoid=int
 COPTS	= -O # -g
 CFLAGS	= $(COPTS) $(DEFS)
 SHAR	= bundle
-OFILE	= /usr/bin/file.orig	# old or distributed version, for comparison
+OFILE	= /usr/bin/file.sun	# old or distributed version, for comparison
 # Where new binary lives; typically /usr/local (BSD), /usr/lbin (USG).
-BINDIR	= /usr/local
-# For installing our man pages; typically MANDIR is /usr/man/man1 (BSD)
-# or /usr/man/local (USG). MAN?EXT is [15] on BSD, l for BSD if
-# installing in /usr/man/manl (for local), [14] on USG.
-MANDIR	= /usr/man/local
-MAN1EXT	= 1
-MAN4EXT	= 4
+BINDIR	= /usr/local/bin
+# For installing our man pages; 
+# MANCxxx is manual section for Commands, MANFxxx is section for file formats.
+# MANxDIR is directory names; MANxEXT is the filename extention. Usual values:
+# Variable	V7		4BSD		Sys V
+# MANCDIR 	/usr/man/man1	/usr/man/man1	/usr/man/u_man/man1
+# MANFDIR 	/usr/man/man5	/usr/man/man5	/usr/man/u_man/man4
+# MANCEXT	1		1		1
+# MANFEXT	5		5		4
+# --- possible alternative for 4BSD ---
+# MANCDIR			/usr/man/manl
+# MANCEXT			l
+# --- possible alternative for USG ---
+# MANCDIR			/usr/man/local/man1
+# MANCEXT			1
+
+MANCDIR	= /usr/man/manl
+MANFDIR	= /usr/man/man5
+MANCEXT	= l
+MANFEXT	= 5
 
 # There are no system-dependant configuration options (except maybe CFLAGS).
-# Delete some of LOCALSRCS and LOCALOBJS if they're in your C library.
-LOCALSRCS = getopt.c strtol.c strtok.c
+# Delete any of LOCALSRCS and LOCALOBJS that are in your C library.
+LOCALSRCS = getopt.c strtol.c strtok.c strchr.c
 SRCS = file.c apprentice.c fsmagic.c softmagic.c ascmagic.c is_tar.c \
 	print.c $(LOCALSRCS)
-LOCALOBJS = getopt.o strtol.o strtok.o
+LOCALOBJS = getopt.o strtol.o strtok.o strchr.o
 OBJS = file.o apprentice.o fsmagic.o softmagic.o ascmagic.o is_tar.o \
 	print.o $(LOCALOBJS)
 
@@ -51,7 +64,7 @@ ALLSRC = LEGAL.NOTICE README PORTING $(SRCS) *.h \
 
 all:		file magic
 
-test:		all
+test:		all $(OFILE)
 		cd tst; make
 		time $(OFILE) -m ./magic * tst/* >/tmp/t1
 		time ./file -m ./magic * tst/* >/tmp/t2
@@ -70,15 +83,20 @@ ascmagic.o:	names.h
 
 apprentice.o ascmagic.o file.o fsmagic.o print.o softmagic.o: file.h
 
-install:	all
-		cp file $(BINDIR)/file
-		cp magic $(MAGIC)
-		cp file.1 $(MANDIR)/$(MAN1EXT)
-		cp magic.4 $(MANDIR)/$(MAN4EXT)
+install:	file magic file.1 magic.4 $(BINDIR) $(MANCDIR) $(MANCDIR)
+		cp file		$(BINDIR)/file
+		cp magic	$(MAGIC)
+		cp file.1	$(MANCDIR)/file.$(MANCEXT)
+		cp magic.4	$(MANFDIR)/magic.$(MANFEXT)
 
 clean:
 		rm -f *.o file magic lint.out
 		(cd tst; make clean)
 
 dist:		$(ALLSRC)
-		(echo mkdir magdir tst; $(SHAR) $(ALLSRC) ) >$@
+#		Some versions of shar can't handle a single file from
+#		a subdirectory, so we manually insert mkdir as needed.
+#		Put the extra "mkdir" AFTER the ": to unbundle..." line.
+		$(SHAR) $(ALLSRC) | sed -e '1a\
+		mkdir magdir tst' >$@
+
