--- a/Makefile.in
+++ b/Makefile.in
@@ -1,6 +1,6 @@
 # Makefile for file(1) cmd. 
 # Copyright (c) Ian F. Darwin 86/09/01 - see LEGAL.NOTICE.
-# @(#)$Id: Makefile.in,v 1.2 1998/02/15 23:18:53 christos Exp $
+# @(#)$Id: Makefile.in,v 1.3 1998/02/15 23:21:17 christos Exp $
 #
 # This software is not subject to any license of the American Telephone
 # and Telegraph Company or of the Regents of the University of California.
@@ -123,7 +123,7 @@ install.man: file.${MANCEXT} magic.${MANFEXT}
 clean:
 		rm -f *.o core file magic lint dist.* MANIFEST \
 		      magic.${MANFEXT} file.${MANCEXT} \
-		      config.h config.status config.cache
+		      config.h config.status config.cache config.log
 clobber:
 		cd tst; $(MAKE) clean
 
