--- a/config.h.in
+++ b/config.h.in
@@ -6,6 +6,9 @@
 /* Define if your struct stat has st_rdev.  */
 #undef HAVE_ST_RDEV
 
+/* Define if you have <sys/wait.h> that is POSIX.1 compatible.  */
+#undef HAVE_SYS_WAIT_H
+
 /* Define to `long' if <sys/types.h> doesn't define.  */
 #undef off_t
 
