Deal with older versions of autoconf and automake

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 # don't enforce GNU packaging standards
-AUTOMAKE_OPTIONS = foreign
+AUTOMAKE_OPTIONS = foreign no-dependencies
 
 bin_PROGRAMS = file
 
