--- a/config.h.in
+++ b/config.h.in
@@ -24,6 +24,12 @@
 /* Define if you have the ANSI C header files.  */
 #undef STDC_HEADERS
 
+/* Autoheader needs me */
+#define PACKAGE "file"
+
+/* Autoheader needs me */
+#define VERSION "3.27"
+
 /* Define if builtin ELF support is enabled.  */
 #undef BUILTIN_ELF
 
@@ -66,10 +72,3 @@
 
 /* Define if you have the <unistd.h> header file.  */
 #undef HAVE_UNISTD_H
-
-/* Name of package */
-#undef PACKAGE
-
-/* Version number of package */
-#undef VERSION
-
