--- a/configure.in
+++ b/configure.in
@@ -41,6 +41,7 @@ AC_HEADER_STDC
 AC_HEADER_MAJOR
 AC_HEADER_SYS_WAIT
 AC_CHECK_HEADERS(unistd.h)
+AC_CHECK_HEADERS(locale.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
