build magic.mgc

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@ AUTOMAKE_OPTIONS = foreign no-dependencies
 
 bin_PROGRAMS = file
 
-data_DATA = magic magic.mime
+data_DATA = magic magic.mime magic.mgc
 
 MAGIC	 = @datadir@/magic
 CPPFLAGS = -DMAGIC='"$(MAGIC)"' -DQUICK
@@ -17,7 +17,7 @@ file_SOURCES = file.c apprentice.c fsmagic.c softmagic.c ascmagic.c \
 EXTRA_DIST = LEGAL.NOTICE MAINT PORTING Makefile.std magic2mime \
 	Localstuff Header $(magic_FRAGMENTS) file.man magic.man
 
-CLEANFILES = $(man_MANS) magic
+CLEANFILES = $(man_MANS) magic magic.mgc
 
 magic: Header Localstuff $(magic_FRAGMENTS)
 	cat $(srcdir)/Header $(srcdir)/Localstuff > $@
@@ -29,6 +29,9 @@ magic: Header Localstuff $(magic_FRAGMENTS)
 	  fi; \
           cat $$f; \
 	done >> $@
+
+magic.mgc: magic file
+	./file -C -m magic
 
 file.1:	Makefile file.man
 	@rm -f $@
