Always enable quick mode, even if we don't have mmap (christos) Autoconf help for mmap (Alexander Mai)

--- a/Makefile.in
+++ b/Makefile.in
@@ -72,7 +72,7 @@ bin_PROGRAMS = file
 data_DATA = magic magic.mime magic.mgc
 
 MAGIC = @datadir@/magic
-CPPFLAGS = -DMAGIC='"$(MAGIC)"' -DQUICK
+CPPFLAGS = -DMAGIC='"$(MAGIC)"'
 
 man_MANS = file.1 magic.4
 
