--- a/configure.in
+++ b/configure.in
@@ -91,7 +91,7 @@ AC_CHECK_SIZEOF_STDC_HEADERS(uint32_t, 0)
 AC_CHECK_SIZEOF_STDC_HEADERS(uint64_t, 0)
 
 dnl Checks for functions
-AC_CHECK_FUNCS(mmap strerror strtoul mkstemp)
+AC_CHECK_FUNCS(mmap strerror strtoul mkstemp getopt_long)
 
 dnl Checks for libraries
 AC_CHECK_LIB(z,gzopen)
